gcc/testsuite/g++.dg/modules/mod++-decl-2.C
// { dg-options "-fmodules++" }

export module thing;
int i;
module // { dg-error "expected" }
{
}
